# Vocal3D

./: .gitignore  README.md  flake.nix
.cursor/rules/: backend_interaction_and_simplification.mdc  module_removal_guidelines.mdc
VTL3D_1.0.2/helper/02-stl-to-csv/: CMakeLists.txt  README.md  README_elbow.md  generate_hollow_cylinder  generate_tapered_elbow.cpp  tapered_elbow.stl
VTL3D_1.0.2/sources/: Acoustic3dPage.h  AreaFunctionPicture.cpp  BasicPicture.cpp  ColorScale.h  Data.cpp  FdsOptionsDialog.h  FormantOptimizationDialog.cpp  MainWindow.cpp  MainWindow.h  ParamSimu3DDialog.h  PhoneticParamsDialog.h  PoleZeroDialog.cpp  PropModesPicture.cpp  PropModesPicture.h  TdsOptionsDialog.h  VocalTractShapesDialog.h
helper/: 01_vtl3d_fem_core_analysis.aux  01_vtl3d_fem_core_analysis.tex  Makefile  code-structure.md
helper/01-csv-test/: 01-ex-csv-gui.py  contour_s1_test.csv  contour_s1_test01.csv  contour_test04.csv  contour_test05.csv  contour_test09.csv  contour_test10.csv
helper/02-stl-to-csv/: example_pipe.stl  generate_hollow_cylinder.cpp  generate_hollow_cylinder.py  generate_tapered_elbow
helper/03-freecad-python/: README.md  generate_elbow.py  (+1 more)
miniVTL3D/: Acoustic3dPage.cpp  Application.h  ColorScale.cpp  CrossSectionPicture.cpp  Data.h  FormantOptimizationDialog.h  GlottisDialog.cpp  GlottisDialog.h  Graph.cpp  Graph.h  LfPulsePicture.h  ParamSimu3DDialog.cpp  Spectrum3dPicture.h  SpectrumOptionsDialog.h  TableTextPicture.cpp  TableTextPicture.h  TdsOptionsDialog.cpp  VocalTractShapesDialog.cpp
nix/: packages.nix  shells.nix
pkgs/: default.nix
(+131 files in other folders)
